--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,9 @@ Section: doc
 Priority: extra
 Maintainer: Dinko Sabo <cobra@sidux.com>
 Build-Depends: debhelper (>= 7)
-Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>, Ferdinand Thommes <devil@sidux.com>
-Standards-Version: 3.8.1
+Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>,
+ Ferdinand Thommes <devil@sidux.com>
+Standards-Version: 3.8.4
 Vcs-Svn: svn://svn.berlios.de/fullstory/eduversum-howto/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/eduversum-howto/trunk/
 
